--- a/About us/about.css
+++ b/About us/about.css
@@ -1,4 +1,10 @@
 
+@media screen and (min-width:992px){
+  .nav-item {
+  line-height:80px;
+  }
+}
+
 * {
     font-family: Nunito, sans-serif;
   }
