--- a/Main/MainStyle.css
+++ b/Main/MainStyle.css
@@ -1,3 +1,10 @@
+/* NavBar */
+@media screen and (min-width:992px){
+    .nav-item {
+    line-height:80px;
+    }
+  }
+
 .guitar {
     display: flex;
     align-items: center;
