--- a/Main/MainStyle.css
+++ b/Main/MainStyle.css
@@ -7,6 +7,7 @@
 .invisible {
     display: none;
 /* NavBar */
+
 @media screen and (min-width:992px){
     .nav-item {
     line-height:80px;
@@ -43,4 +44,4 @@
     background-color: #fff;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
-}
+}}
